# poco-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_zh.md  dev-start.sh  dev-stop.sh  docker-compose.r2.yml  docker-compose.yml  pyproject.toml  ruff.toml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/versions/: 0537f90d9fc7_add_user_model_provider_settings.py  06407b1d392d_create_preset_visuals_table.py  0f0033af79a0_.py  496ff1c1ee70_add_pending_skill_creations.py  51643c2207d3_.py  833daf707b32_create_project_files_table.py  8a31d647f0ff_add_im_event_outbox.py  98b9968cc9be_add_session_queue_items_table.py  a1d8c5be4d22_remove_model_provider_byok.py  a5582f015bfd_.py  ac35ccd45c9d_add_description_to_skills_table.py  adbcc3fc76a9_add_description_to_projects.py  b0d7d7f5f351_add_auth_tables.py  b8868c7ab79f_simplify_project_default_preset.py  b97f576b621d_add_preset_tables.py  c7900166fbca_add_project_runtime_config.py  c91c6d7b2a1f_clear_unverified_primary_emails.py  c9d83ea69bc6_add_session_cancellation_state.py  d17c3fd8fad7_create_project_local_mounts_table.py  d4019c5265dc_add_embedded_im_tables.py  f3b9c4d7e8a1_add_run_scoped_replay_and_workspace.py  merge_heads.py
backend/app/: main.py
backend/app/core/: deps.py  lifespan.py  settings.py
backend/app/init_data/: __init__.py  bootstrap.py
backend/app/lifecycle/: __init__.py  bootstrap.py  builtin_mcp.py  builtin_preset_visuals.py  builtin_skills.py  lifespan.py
backend/app/models/: __init__.py  agent_message.py  agent_run.py  agent_session.py  auth_identity.py  claude_md.py  env_var.py  im_active_session.py  im_event_outbox.py  model_provider_setting.py  pending_skill_creation.py  preset.py  preset_visual.py  project.py  project_file.py  project_local_mount.py  project_preset.py  session_queue_item.py  skill_import_job.py  sub_agent.py  tool_execution.py  usage_log.py  user.py  user_input_request.py  user_session.py
backend/app/repositories/: auth_identity_repository.py  im_active_session_repository.py  im_channel_delivery_repository.py  im_channel_repository.py  im_dedup_repository.py  im_event_outbox_repository.py  im_watch_repository.py  message_repository.py  model_provider_setting_repository.py  pending_skill_creation_repository.py  preset_repository.py  preset_visual_repository.py  project_file_repository.py  project_repository.py  run_repository.py  search_repository.py  session_queue_item_repository.py  session_repository.py  skill_import_job_repository.py  skill_repository.py  tool_execution_repository.py  user_repository.py  user_session_repository.py
backend/app/schemas/: audio.py  auth.py  callback.py  capability_recommendation.py  filesystem.py  im_event.py  im_message.py  internal_session.py  message.py  model_config.py  pending_skill_creation.py  preset.py  project.py  project_file.py  run.py  search.py  session.py  session_queue_item.py  skill_import.py  slash_command_config.py  source.py  task.py  tool_execution.py  workspace.py
backend/tests/: test_auth_service.py  test_builtin_preset_visuals.py  test_preset_api.py  test_preset_repository.py  test_preset_services.py  test_project_service.py  test_task_service.py
docs/: .gitignore
executor/: main.py  pyproject.toml
im/: README.md  pyproject.toml
(+589 files in other folders)
