[project]
name = "Poco"
version = "0.1.0"
description = "Poco is a cloud-based AI agent execution platform inspired by Anthropic's Cowork. It orchestrates Claude AI agents to perform autonomous tasks beyond coding—organizing files, writing documents, analyzing data, and more—in a distributed cloud environment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[tool.ruff]
src = ["backend", "executor", "executor_manager"]
extend-exclude = ["backend/assets"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pyrefly]
exclude = ["backend/assets"]

project-includes = [
    "backend",
    "executor",
    "executor_manager"
]

search_path = [
    "backend",
    "executor",
    "executor_manager"
]
